--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=830547d89fc28ea0897660cb7e9a7dc7
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/quiz?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/quiz"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
