secured routes and configuerd links to pages

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,11 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+quiz:
+    resource: '../src/Controller/Quiz'
+    type: attribute
+
+question:
+    resource: '../src/Controller/Question'
+    type: attribute
